# inkcross_dash

./: .gitignore  AGENTS.md  README.md  SPEC.md  main.py  mise.toml  pyproject.toml
app/: __init__.py  calendar_loader.py  dashboard.py  json_store.py  models.py  quantize.py  renderer.py  todo_loader.py  weather.py
data/: calendar.json  todo.json
templates/: dashboard.html  manage.html
tests/: test_loaders.py  test_main.py  test_quantize.py  test_renderer.py  test_weather.py
